# soroscope

./: Cargo.toml  README.md
.github/workflows/: rust.yml  web.yml
api/: Cargo.toml
api/src/: main.rs
contracts/cpu_heavy/: Cargo.toml
contracts/cpu_heavy/src/: lib.rs  test.rs
contracts/cpu_heavy/test_snapshots/test/: test_benchmarks_run_successfully.1.json  test_combined_benchmark.1.json  test_safety_limits.1.json
contracts/hello_soroban/src/: test.rs
contracts/liquidity_pool/src/: lib.rs  test.rs
contracts/liquidity_pool/test_snapshots/test/: test_basic_flow.1.json  test_events.1.json  (+5 more)
contracts/storage_heavy/: Cargo.toml
contracts/storage_heavy/src/: lib.rs  test.rs
contracts/token/src/: allowance.rs  balance.rs  contract.rs  lib.rs  metadata.rs  test.rs
core/: Cargo.toml
core/src/: benchmarks.rs  errors.rs  lib.rs  main.rs  simulation.rs
web/: .gitignore  package-lock.json  package.json
web/.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
web/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
web/.next/dev/: build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  trace
web/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
web/components/: ContractInteraction.tsx  DynamicForm.tsx  FunctionSidebar.tsx  InnovocationHistory.tsx  NutritionLabel.tsx  Resultviewer.tsx  resource-label.tsx
web/lib/: sorobantypes.ts
web/pages/: index.tsx
(+212 files in other folders)
