[package]
name = "soroscope-core"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "22.0.0" # Adjust to the latest compatible version
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
