[package]
name = "soroscope-core"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
config = "0.14"
axum = "0.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
